Fix emblems on Safari
It seems Safari can't deal with half pixel background positions/sizes. how to people do spritesheets???

--- a/source/stylesheets/components/_emblems.scss
+++ b/source/stylesheets/components/_emblems.scss
@@ -2,6 +2,7 @@
   background-image: url(/resources/graphics/emblems.webp);
   background-size: auto 100%;
   background-position-x: calc(-100% * var(--o));
+  height: 18px; // Safari can't deal with half pixel size sprites. grrr :/
 }
 // [data-emblem="birdo"] { --o: 0; }
 [data-emblem="birdo1"] { --o: 1; }
